# simple_cpp_library

./: CMakeLists.txt  LICENSE
conda/: build.sh  meta.yaml
include/: simple_cpp_library.hpp
src/: simple_cpp_library.cpp
tests/: simple_cpp_library_tests.cpp
